# finpulse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.devcontainer.yml  docker-compose.yml
backend/: Dockerfile  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  seed.py
docs/: ARCHITECTURE.md  BUSINESS_LOGIC.md  DEVELOPMENT.md  FEATURE_TRACKER.md  INTEGRATIONS.md  PROJECT_STRUCTURE.md  STACK.md
docs/adr/: 001-nextjs-fullstack.md  002-sqlite-database.md  003-money-as-cents.md  004-custom-ui-components.md  005-auth-credentials-jwt.md
prisma/: schema.prisma  seed.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx
src/app/(app)/accounts/: accounts-client.tsx  page.tsx
src/app/(app)/budgets/: page.tsx
src/app/(app)/dashboard/: dashboard-client.tsx  page.tsx
src/app/(app)/goals/: page.tsx
src/app/(app)/import/: page.tsx
src/app/(app)/insights/: page.tsx
src/app/(app)/pay/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(app)/subscriptions/: page.tsx
src/app/(app)/transactions/: page.tsx  (+1 more)
src/app/(auth)/: layout.tsx
src/components/layout/: app-shell.tsx  mobile-nav.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  sheet.tsx  table.tsx  tabs.tsx  toast.tsx
src/lib/: api.ts  auth.ts  utils.ts
src/types/: index.ts  next-auth.d.ts
(+11 files in other folders)
